--- a/feedback.html
+++ b/feedback.html
@@ -42,7 +42,7 @@
         <div class="feedback_back">Back to ETH Gas Station
         </div>
       </a>
-      <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://settlefinance.typeform.com/to/gVjNGO">
+      <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://concourseopen.typeform.com/to/gVjNGO">
       </iframe>
     </div>
   </div>
